# docs/swagger.json
@@ -29,7 +29,7 @@
                     {
                         "type": "string",
                         "description": "Request ID generated by client",
-                        "name": "P-Request-ID",
+                        "name": "P-Request-Id",
                         "in": "header"
                     }
                 ],
@@ -42,7 +42,7 @@
                         "headers": {
                             "string": {
                                 "type": "string",
-                                "description": "P-Request-ID"
+                                "description": "P-Request-Id"
                             }
                         }
                     }
