# pkg/handlers/healthcheck.go
@@ -1,7 +1,6 @@
 package handlers
 
 import (
-	"go-skeleton-rest-app/internal/models"
 	"go-skeleton-rest-app/pkg/http/responses"
 	"net/http"
 
@@ -17,9 +16,9 @@ import (
 // @Tags root
 // @Accept */*
 // @Produce json
-// @Param P-Request-ID header string false "Request ID generated by client"
+// @Param P-Request-Id header string false "Request ID generated by client"
 // @Success 200 {object} models.StandardJSONResponse
-// @Header	200	{string}	string	"P-Request-ID"
+// @Header	200	{string}	string	"P-Request-Id"
 // @Router /healthcheck [get]
 func HealthCheck(c echo.Context) error {
 
@@ -35,9 +34,21 @@ func HealthCheck(c echo.Context) error {
 
 	logs.Info().Str("server trace ID", serverTraceID).Str("handler", "HealthCheck").Send()
 
-	var reply models.StandardJSONResponse
-	reply.Code = responses.SuccessCode
-	reply.Message = "I'm ok"
+	// reply with SuccessCode
+	reply, err := responses.GetReponseMessageByCode(responses.SuccessCode)
+
+	if err != nil {
+		logs.Error().Err(err).Caller().Send()
+		// override the reply message with the error message
+		reply.Message = "GetReponseMessageByCode(responses.SuccessCode) error : " + err.Error()
+
+		c.Response().Header().Set(responses.ClientRequestID, pRequestID)
+		c.Response().WriteHeader(http.StatusInternalServerError)
+		return c.JSON(http.StatusInternalServerError, reply)
+	}
+
+	// override the success message
+	reply.Message = reply.Message + ". I'm ok."
 
 	c.Response().Header().Set(responses.ClientRequestID, pRequestID)
 	c.Response().WriteHeader(http.StatusOK)
